fixed overlapping issue

--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -3,12 +3,7 @@
   background: grey;
   padding: 5px 10px;
   display: flex;
-  justify-content: flex-start; 
-position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 70px;}
+  justify-content: flex-start; }
   #layout-footer a {
     color: white;
     text-decoration: none; }
